--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc & mongod --port 27017 & node dist/server.js"
+    "start": "tsc & mongod --port 27017 & node dist/server.js",
+    "test:unit": "jest src/test/unit/"
   },
   "keywords": [],
   "author": "Joshua",
@@ -22,6 +23,7 @@
     "@types/mongoose": "^5.11.97",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jest-mock-extended": "^3.0.6",
     "moongoose": "^0.0.5"
   }
 }
