--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -1,6 +1,6 @@
 name: Integration Tests
 
-on: 
+on:
   pull_request:
     branches: ["main"]
 
@@ -24,6 +24,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Install Jest
+        run: npm i -g jest
 
       - name: Run integration tests
         run: npm run test:integration
