--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest src/test/*",
     "start": "tsc & mongod --port 27017 & node dist/server.js",
     "test:unit": "jest src/test/unit/",
     "test:watch:unit": "jest --watch src/test/unit/",
     "test:integration": "jest src/test/integration/*",
     "test:watch:integration": "jest --watch src/test/integration/*"
-
   },
   "keywords": [],
   "author": "Joshua",
@@ -19,6 +18,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/moment": "^2.13.0",
     "@types/mongodb-memory-server": "^2.3.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.7",
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jest-mock-extended": "^3.0.6",
+    "moment": "^2.30.1",
     "moongoose": "^0.0.5"
   }
 }
