--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/mockingoose": "^2.13.0",
     "@types/moment": "^2.13.0",
     "@types/mongodb-memory-server": "^2.3.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.7",
+    "mockingoose": "^2.16.2",
     "mongodb-memory-server": "^9.2.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
@@ -31,6 +33,6 @@
     "express": "^4.19.2",
     "jest-mock-extended": "^3.0.6",
     "moment": "^2.30.1",
-    "moongoose": "^0.0.5"
+    "moongoose": "^0.0.1"
   }
 }
