clean up and adding smoke test files

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 DB_NAME=soulscriptDB
-PORT=27017
+MONGODB_PORT=27017
+SERVER_PORT=3001
 HOST=localhost
 MOOD_ENTRY_TYPE=mood
 JOURNAL_ENTRY_TYPE=journal
 GRATITUDE_ENTRY_TYPE=gratitude
+ENV=prod
