passing unit test and implementation

--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,11 @@
               },
 
               {
+                "selector": "typeAlias",
+                "format": ["PascalCase"]
+              },
+
+              {
                 "selector": "property",
                 "format": ["camelCase"],
                 "leadingUnderscore": "allow"
