--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,11 @@
               },
 
               {
+                "selector": "typeParameter",
+                "format": ["UPPER_CASE"]
+              },
+
+              {
                 "selector": "variable",
                 "format": ["camelCase"]
               },
